hard-gists/8036995/run.log
=== Docker Run Log for 8036995 ===
Started at: Mi 29. Okt 17:36:22 CET 2025

[2025-10-29 17:36:23] START: Running container for 8036995
[2025-10-29 17:36:23] SUCCESS: Container 41008b5b8710da1675a984f039edb712fef669ec958ff8b96bd71e1105a0beb8 started for 8036995
=== Container logs for 8036995 ===
  File "/snippet.py", line 97
    print "--"
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8036995 ===
[2025-10-29 17:36:25] INFO: Container 41008b5b8710da1675a984f039edb712fef669ec958ff8b96bd71e1105a0beb8 has stopped
